@@ -7,6 +7,7 @@ restauth-common 0.6.1 (XX XXXX 2013)
     * xml --> XMLContentHandler
     * form --> FormContentHandler
    Old names are still available for now.
+  * Add a minor test-suite to test the import feature.
 
 restauth-common 0.6.0 (16 August 2012)
 
